--- a/generic_builder/Cargo.toml
+++ b/generic_builder/Cargo.toml
@@ -11,4 +11,4 @@ proc-macro = true
 [dependencies]
 proc-macro2 = "1.0.59"
 quote = "1.0.28"
-syn = { version = "2.0.18", features = ["extra-traits"] }
+syn = { version = "2.0.18", features = ["extra-traits", "full"] }
